# legacy-code-01-team-commit-crimes

./: .gitignore  README.md  hello.py  main.py  pyproject.toml  test.py
assets/: proj2.ase
src/engine/: game.py  make_map.py  settings.py
src/leaf_eater/: __init__.py  utils.py
src/leaf_eater/engine/: events.py  game.py  make_map.py  settings.py
src/leaf_eater/farkas_tools/: UIblock.py  buttons.py  imageprepare.py  multi_sprite_renderer_hardware.py  multi_sprite_renderer_software.py
src/leaf_eater/objects/: player.py  ui.py
src/leaf_eater/scene/: __init__.py  base.py  gameover.py  gameplay.py  intro.py
src/leaf_eater/screens/: __init__.py  base.py  gameplay.py  intro.py
src/objects/: player.py  txt_item.py
src/screens/: gameplay.py  intro.py
